# oop_labs

lab1/: .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt
lab1/test/: CMakeLists.txt  Test.cpp
lab2/: CMakeLists.txt  CmdParsedData.cpp  CmdParsedData.h  CommandLineParser.cpp  CommandLineParser.h  FileParsedData.cpp  FileParsedData.h  Game.cpp  Game.h  GameInterface.cpp  GameInterface.h  InputFileParser.cpp  InputFileParser.h  OfflineGameMode.cpp  OfflineGameMode.h  OnlineGameMode.cpp  OnlineGameMode.h  Universe.cpp  Universe.h  default_output.txt  main.cpp  qwe.txt
lab2/GameModes/: OfflineGameMode.cpp  OfflineGameMode.h  OnlineGameMode.cpp  OnlineGameMode.h
lab2/Parsers/: CmdParsedData.cpp  CmdParsedData.h  CommandLineParser.cpp  CommandLineParser.h  FileParsedData.cpp  FileParsedData.h  InputFileParser.cpp  InputFileParser.h
lab2/test/: CMakeLists.txt  Test.cpp  bad-test-output1.txt  bad-test-universe1.txt  test-output1.txt  test-universe1.txt
lab2/universe-examples/: blinker.txt  switch-engine.txt
